<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Stuff -->
    <string name="app_name">Conquest Online</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_close">Close</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Home Screen -->
    <string name="title_activity_main">Home</string>
    <string name="main_login">Login</string>
    <string name="main_register">Register</string>

    <!-- Map Stuff -->
    <string name="title_activity_map">MapActivity</string>
    <string name="mapDesc">Buttons on the map screen that are pressable</string>
    <string name="playerHealth"></string>

    <!-- Register Screen -->
    <string name="title_activity_register">Register</string>
    <string name="rs_welcome">Register Screen.</string>
    <string name="rs_user">Username:</string>
    <string name="rs_email">E-Mail:</string>
    <string name="rs_pass">Password:</string>
    <string name="rs_pass_confirm">Confirm:</string>
    <string name="rs_button">Register</string>
    <string name="class_choose">Choose Class</string>
    <string name="spy_b">Spy</string>
    <string name="engineer_b">Engineer</string>
    <string name="soldier_b">Soldier</string>
    <string name="characterButton">Button used to select class type of character</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Social Screen -->
    <string name="socialAdd">Add</string>
    <string name="title_activity_character">StatsActivity</string>
    <string name="title_activity_property">StatsActivity</string>

    <!-- Character Screen -->
    <string name="itemPlace">Used to show what items a person has on him</string>
    <string name="helmet">Helmet Holder</string>
    <string name="chest">Chest piece holder</string>
    <string name="leg">Leg holder</string>
    <string name="boot">Boot holder</string>
    <string name="weapon">Weapon holder</string>
    <string name="stats">Player Stats</string>
    <string name="title_activity_stats">StatsActivity</string>

    <!-- Property Screen -->
    <string name="property">Property Information</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="new_prop">Add New Property</string>
    <string name="title_activity_newproperty">PropertyActivity</string>
    
    <!-- Dialog text for blank spaces -->
    <string-array name="gridOptionsBlank">
        <item>"Place Structure"</item>
		<item>"Cancel"</item>
    </string-array>
    
    <!-- Dialog text for structure types -->
    <string-array name="gridOptionsStructures">
        <item>"Offensive Structure"</item>
        <item>"Defensive Structure"</item>
		<item>"Cancel"</item>
    </string-array>
    
     <!-- Dialog text for non-spaces -->
    <string-array name="gridOptionsOccupied">
        <item>"Upgrade"</item>
        <item>"Repair"</item>
		<item>"View Stats"</item>
		<item>"Store in Chest"</item>
		<item>"Cancel"</item>
    </string-array>

    <!-- Shop Screen -->
    <string name="apple">Adds 50 pts to health - 50g</string>
    <string name="chicken">Adds 200 pts to health - 200g</string>
    <string name="sandwich">Adds 100 pts to health - 100g</string>
    <string name="cupcake">Adds 10 pts to health - 10g</string>
    <string name="shop">Store</string>
    <string name="health">Health Items</string>
    <string name="weapons">Weapons and Ammo</string>
    <string name="hDef">Home defense items</string>
    <string name="hOff">Home offense items</string>
    <string name="shopItem">Item that can be purchased in the shop</string>
    <string name="knife">Has an attack of 5 - 150g</string>
    <string name="sword">Has an attack of 15 - 400g</string>
    <string name="pistol">Has an attack of 50 - 1050g</string>
    <string name="rifle">Has an attack to 200 - 2500g</string>
    <string name="title_activity_character_activity_new">CharacterActivityNew</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_bullshit">BULLSHIT</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_asd">ASD</string>
    <string name="title_activity_new_social">NewSocialActivity</string>
    <string name="title_activity_personal_property">PersonalPropertyActivity</string>

</resources>
