<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_image"
    android:orientation="horizontal" >       
    
    <Button
        android:id="@+id/login_bu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical = "true"
        android:text="@string/main_login"
        android:onClick="goToLogin" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@id/login_bu"
        android:text="@string/main_register"
        android:onClick="goToRegister" />

    <TextView
        android:id="@+id/title_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_bu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/app_name"
        android:textSize="36sp" />

</RelativeLayout>