<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/helmet_holder" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView1"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/chest_holder" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView1"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/leg_holder" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView4"
        android:contentDescription="@string/itemPlace"
        android:layout_toRightOf="@+id/imageView1"
        android:src="@drawable/boot_holder" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/engineer" />
    
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toLeftOf="@+id/imageView1"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/weapon_holder" />
    
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView6"
        android:layout_toLeftOf="@+id/imageView1"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/weapon_holder" />
    
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView7"
        android:layout_toLeftOf="@+id/imageView1"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/weapon_holder" />
    
    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView8"
        android:layout_toLeftOf="@+id/imageView1"
        android:contentDescription="@string/itemPlace"
        android:src="@drawable/weapon_holder" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView2"
        android:text="@string/helmet" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:text="@string/chest" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:text="@string/leg" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:text="@string/boot" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageView6"
        android:text="@string/weapon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView7"
        android:layout_toLeftOf="@+id/imageView7"
        android:text="@string/weapon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView8"
        android:layout_toLeftOf="@+id/imageView8"
        android:text="@string/weapon" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView9"
        android:layout_toLeftOf="@+id/imageView9"
        android:text="@string/weapon" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

</RelativeLayout>